--- a/Docs/yaak.rq_n6kBnomPT3.yaml
+++ b/Docs/yaak.rq_n6kBnomPT3.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_n6kBnomPT3
 createdAt: 2025-11-05T19:08:48.240091200
-updatedAt: 2025-11-19T20:16:42.291643
+updatedAt: 2025-11-19T22:35:00.338148500
 workspaceId: wk_Fb63W8kZcR
 folderId: fl_WCvChRdjU8
 authentication: {}
@@ -10,8 +10,7 @@ authenticationType: null
 body:
   text: |-
     {
-      "Id": "SEDE-03",
-      "Nombre": "Sede Sur",
+      "Id": "SEDE-MAIN",
       "Password": "123456"
     }
 bodyType: application/json
@@ -24,5 +23,5 @@ headers:
 method: PUT
 name: Create Sede
 sortPriority: 0.0
-url: https://client-server-production-ee1e.up.railway.app/sedes
+url: https://localhost:7205/sedes
 urlParameters: []
