--- a/docs/yaak.rq_n6kBnomPT3.yaml
+++ b/docs/yaak.rq_n6kBnomPT3.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_n6kBnomPT3
 createdAt: 2025-11-05T19:08:48.240091200
-updatedAt: 2025-11-19T22:35:00.338148500
+updatedAt: 2025-11-19T23:19:49.024748500
 workspaceId: wk_Fb63W8kZcR
 folderId: fl_WCvChRdjU8
 authentication: {}
@@ -23,5 +23,5 @@ headers:
 method: PUT
 name: Create Sede
 sortPriority: 0.0
-url: https://localhost:7205/sedes
+url: ${[ API_URL ]}/sedes
 urlParameters: []
