Se crea endpoint para crear y obtener sedes, con seguridad

--- a/docs/yaak.rq_KFHAeptEhB.yaml
+++ b/docs/yaak.rq_KFHAeptEhB.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_KFHAeptEhB
 createdAt: 2025-11-05T19:01:27.006503900
-updatedAt: 2025-11-19T20:16:50.050618300
+updatedAt: 2025-11-20T05:22:03.792873200
 workspaceId: wk_Fb63W8kZcR
 folderId: fl_WCvChRdjU8
 authentication: {}
@@ -14,5 +14,5 @@ headers: []
 method: GET
 name: Get Eventos
 sortPriority: 1000.0
-url: https://client-server-production-ee1e.up.railway.app/eventos
+url: ${[ API_URL ]}/eventos
 urlParameters: []
