--- a/docs/yaak.rq_n6kBnomPT3.yaml
+++ b/docs/yaak.rq_n6kBnomPT3.yaml
@@ -2,7 +2,7 @@ type: http_request
 model: http_request
 id: rq_n6kBnomPT3
 createdAt: 2025-11-05T19:08:48.240091200
-updatedAt: 2025-11-19T23:19:49.024748500
+updatedAt: 2025-11-20T05:23:58.906672200
 workspaceId: wk_Fb63W8kZcR
 folderId: fl_WCvChRdjU8
 authentication: {}
@@ -10,7 +10,7 @@ authenticationType: null
 body:
   text: |-
     {
-      "Id": "SEDE-MAIN",
+      "Id": "SEDE-02",
       "Password": "123456"
     }
 bodyType: application/json
