--- a/docs/yaak.rq_qWBnhd5ZXC.yaml
+++ b/docs/yaak.rq_qWBnhd5ZXC.yaml
@@ -1,8 +1,8 @@
 type: http_request
 model: http_request
-id: rq_p2d7RpeuSh
-createdAt: 2025-11-05T19:32:46.668169300
-updatedAt: 2025-11-20T05:21:58.184501400
+id: rq_qWBnhd5ZXC
+createdAt: 2025-11-20T05:21:27.228011300
+updatedAt: 2025-11-20T05:21:52.676625100
 workspaceId: wk_Fb63W8kZcR
 folderId: fl_WCvChRdjU8
 authentication: {}
@@ -12,7 +12,7 @@ bodyType: null
 description: ''
 headers: []
 method: GET
-name: Get Sede Eventos
-sortPriority: 2000.0
-url: ${[ API_URL ]}/sedes/SEDE-03/eventos
+name: Get Sedes
+sortPriority: 2000.001
+url: ${[ API_URL ]}/sedes
 urlParameters: []
